--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Gorditas&display=swap');
+
 html {
     box-sizing: border-box;
 }
@@ -5,4 +7,30 @@ html {
 body {
     margin: 0;
     min-height: 100vh;
+    background: whitesmoke;
+    font-family: Gorditas, sans-serif;
+}
+
+h1 {
+    text-align: center;
+    letter-spacing: 4px;
+    margin-top: 20px;
+    margin-bottom: 15px;
+    font-size: 40px;
+}
+
+.loader {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: rgba(255, 255, 255, 0.7)
+}
+
+.loader img {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
