--- a/style.css
+++ b/style.css
@@ -11,14 +11,16 @@ body {
     font-family: Gorditas, sans-serif;
 }
 
+/* Title */
 h1 {
     text-align: center;
     letter-spacing: 4px;
     margin-top: 20px;
-    margin-bottom: 15px;
+    margin-bottom: 30px;
     font-size: 40px;
 }
 
+/* Loader */
 .loader {
     position: fixed;
     left: 0;
@@ -33,4 +35,27 @@ h1 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+/* Image Container */
+.img-container {
+    margin: 20px 20%;
+}
+
+.img-container img {
+    width: 100%;
+    height: 420px;
+    display: block;
+    margin: 15px auto
+}
+
+/* Media Query: Large Smartphone */
+@media screen and (max-width: 600px) {
+    h1 {
+        font-size: 20px;
+    }
+
+    .img-container {
+        margin: 10px
+    }
 }
